# budget-app

./: .env.example  .gitignore  CLAUDE.md  README.md  dev.sh  docker-compose.override.yml  docker-compose.yml
.github/workflows/: rust.yml
ai/: implementation_plan.md  project_plan.md
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_create_accounts.sql  0002_create_categories.sql  0003_create_transactions.sql  0004_seed_default_categories.sql
backend/src/: error.rs  lib.rs  main.rs
backend/src/handlers/: accounts.rs  categories.rs  client_errors.rs  mod.rs  reports.rs  transactions.rs
backend/src/models/: account.rs  category.rs  mod.rs  report.rs  transaction.rs
backend/src/queries/: accounts.rs  categories.rs  mod.rs  reports.rs  transactions.rs
backend/tests/: account_queries.rs  category_queries.rs  report_handlers.rs  report_queries.rs  transaction_queries.rs
backend/tests/common/: mod.rs
docs/superpowers/plans/: 2026-03-29-frontend-redesign.md
docs/superpowers/specs/: 2026-03-29-frontend-redesign.md  2026-04-09-i18n-currency-design.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: i18n.js  index.css  main.jsx
frontend/src/api/: accounts.js  categories.js  reports.js  transactions.js
frontend/src/components/: AccountCard.jsx  AccountCard.test.jsx  AccountForm.jsx  AccountForm.test.jsx  CategoryForm.jsx  CategoryForm.test.jsx  CategoryPicker.jsx  CategoryPicker.test.jsx  ErrorToast.jsx  ErrorToast.test.jsx  FilterBar.jsx  FilterBar.test.jsx  FilterPanel.jsx  FilterPanel.test.jsx  (+8 more)
(+28 files in other folders)
