[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "bigdecimal",
  "migrate",
] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
